# media-analyzer

./: .gitignore  config.toml.example  pyproject.toml
api/: db.py  main.py
api/routers/: filters.py  media.py
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  api.test.ts  api.ts
frontend/src/components/: FilterBar.test.tsx  FilterBar.tsx  MediaTable.test.tsx  MediaTable.tsx  RowDetail.test.tsx  RowDetail.tsx
frontend/src/hooks/: useFilters.ts  useMedia.ts
scanner/: config.py  db.py  ffprobe.py  models.py  scan.py
tests/api/: conftest.py  test_filters.py  test_media.py  test_media_detail.py
tests/scanner/: test_config.py  test_db.py  test_ffprobe.py  test_scan.py
tests/scanner/fixtures/: h264_sdr.json  hevc_hdr10.json  multi_audio_subs.json
